--- a/HumanPop/HumanPop.csproj
+++ b/HumanPop/HumanPop.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DBRepository\DBRepository.csproj" />
+  </ItemGroup>
+
 </Project>
