change class libraries to core, connect to database

--- a/HumanPop/appsettings.json
+++ b/HumanPop/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=HumanPop;Integrated Security=True;MultipleActiveResultSets=true;"
+  },
+
+  "pageSize": 10,
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
