--- a/HumanPop/HumanPop.csproj
+++ b/HumanPop/HumanPop.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DBRepository\DBRepository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="App\containers\header\" />
+    <Folder Include="App\containers\about\" />
   </ItemGroup>
 
 </Project>
