--- a/HumanPop/appsettings.json
+++ b/HumanPop/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=HumanPop;Integrated Security=True;MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=HumanPop;Integrated Security=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "workstation id=humanpop.mssql.somee.com;packet size=4096;user id=humanpop_SQLLogin_1;pwd=zcvbqxgeb7;data source=humanpop.mssql.somee.com;persist security info=False;initial catalog=humanpop"
   },
 
   "pageSize": 10,
